svx/source/sdr/contact/objectcontactofpageview.cxx
@@ -175,12 +175,14 @@ namespace sdr
             // create ViewRange
             if(isOutputToRecordingMetaFile())
             {
-                if(isOutputToPDFFile() || isOutputToPrinter())
+                if (!rDisplayInfo.GetRedrawArea().IsEmpty())
                 {
                     // #i98402# if it's a PDF export, set the ClipRegion as ViewRange. This is
                     // mainly because SW does not use DrawingLayer Page-Oriented and if not doing this,
                     // all existing objects will be collected as primitives and processed.
                     // OD 2009-03-05 #i99876# perform the same also for SW on printing.
+                    // fdo#78149 same thing also needed for plain MetaFile
+                    //           export, so why not do it always
                     const Rectangle aLogicClipRectangle(rDisplayInfo.GetRedrawArea().GetBoundRect());
 
                     aViewRange = basegfx::B2DRange(
